# llm-judge-bias

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: architecture.html
src/judgebias/: __init__.py  benchmark.py  cli.py  data.py  llm.py
tests/: test_judgebias.py
